# transcript-summarizer

./: README.md  app.py  explanations.py  pyproject.toml  requirements.txt  transcript_transformer.py
